[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/HeadTrackCamDummy.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Testing/AxisArrows.tscn" type="PackedScene" id=3]

[sub_resource type="SphereMesh" id=1]
radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.101961, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="SphereMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
albedo_color = Color( 0.996078, 0, 0, 0.317647 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 1
font_data = ExtResource( 2 )

[node name="HeadTrackCamDummy" type="Spatial"]
script = ExtResource( 1 )

[node name="XDummy" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="YDummy" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="ComboDummy" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="DistanceSphere" type="MeshInstance" parent="."]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="TrackStateDebugLabel" type="Label" parent="."]
margin_right = 202.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "head tracking: off"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RawOffsetDebugLabel" type="Label" parent="."]
margin_left = 13.0
margin_top = 48.0
margin_right = 131.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "raw offset
X:
Y:
Z:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SensitivityDebugLabel" type="Label" parent="."]
margin_left = 166.0
margin_top = 47.0
margin_right = 277.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sensitivity
X:
Y:
Z:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CamOffsetDebugLabel" type="Label" parent="."]
margin_left = 328.0
margin_top = 47.0
margin_right = 446.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "cam offset
X:
Y:
Z:"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AxisArrows" parent="." instance=ExtResource( 3 )]
